--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -13,6 +13,7 @@ ice_floe:
   description: "This voluptuous feast of sea lion flipper with braised lichen will be served with extraordinary company in a sublime setting."
   photo_url: "http://i.telegraph.co.uk/multimedia/archive/03339/polar-bear-global-_3339474b.jpg"
   lifecycle: "available"
+  category: exotic
 
 my_product:
   name: "squatty potty"
@@ -21,3 +22,4 @@ my_product:
   price: 25
   inventory: 1000
   lifecycle: "available"
+  category: healthy
