--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -13,13 +13,14 @@ ice_floe:
   description: "This voluptuous feast of sea lion flipper with braised lichen will be served with extraordinary company in a sublime setting."
   photo_url: "http://i.telegraph.co.uk/multimedia/archive/03339/polar-bear-global-_3339474b.jpg"
   lifecycle: "available"
-  category: exotic
+  # category: exotic
 
 my_product:
+  vendor: Dwight
   name: "squatty potty"
   description: "helps you poop like a cave man"
   photo_url: "example 123"
   price: 25
   inventory: 1000
   lifecycle: "available"
-  category: healthy
+  # category: healthy
