--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -24,3 +24,13 @@ my_product:
   inventory: 1000
   lifecycle: "available"
   categories: healthy
+
+twinkies:
+  vendor: Jim
+  name: "Twinkies Fed to You in a Sauna"
+  description: "The almost-pastry you remember in an utterly relaxing setting"
+  photo_url: "example 123"
+  price: 150
+  inventory: 15
+  lifecycle: "available"
+  categories: healthy, spa
