Initial sessions controller test and helper methods

--- a/test/fixtures/vendors.yml
+++ b/test/fixtures/vendors.yml
@@ -8,15 +8,23 @@
 polar_queen:
   username: "Polar Queen"
   email: "queen@seriouslyfreezing.com"
+  uid: "111"
+  provider: "github"
 
 Dwight:
   username: "Dwight Schrute"
   email: "Dwight@schrutefarms.com"
+  uid: "222"
+  provider: "github"
 
 Jim:
   username: "Jim Halpert"
   email: "jim@athlead.com"
+  uid: "333"
+  provider: "github"
 
 Michael:
     username: "Michael Scott"
     email: "mscott@greatscottproductions.com"
+    uid: "444"
+    provider: "github"
